--- a/admin/index.html
+++ b/admin/index.html
@@ -27,7 +27,7 @@
     (async () => {
       // Initialize Auth0
       const auth0 = await createAuth0Client({
-        domain: "dev-ledqz606i2aipjyh.us.auth0.com",        // Replace with your Auth0 domain
+        domain: "dev-ledqz606i2aipjyh.auth0.com",        // Replace with your Auth0 domain
         client_id: "JPeiSOBKOrGZQmKywY8bn9TU2OfXqjwY",  // Replace with your Auth0 client ID
         redirect_uri: window.location.origin + "/admin/"
       });
