--- a/admin/index.html
+++ b/admin/index.html
@@ -5,8 +5,7 @@
   <title>Afytk CMS</title>
 
   <!-- Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms.js"></script>
-
+   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   <!-- Netlify Identity Widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
