--- a/admin/index.html
+++ b/admin/index.html
@@ -2,14 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
-
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.0/dist/cms.css" />
-
-  <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
+  <title>Admin</title>
+  <script src="https://unpkg.com/decap-cms@^2.0.0/dist/umd/index.min.js"></script>
 </head>
 <body>
-  <script src="https://unpkg.com/netlify-cms@^1.0/dist/cms.js"></script>
+  <script>
+    // Initialize CMS normally; Decap will fetch /admin/config.yml
+    CMS.init();
+  </script>
 </body>
 </html>
