--- a/admin/index.html
+++ b/admin/index.html
@@ -12,7 +12,7 @@
   <script>
     const status = document.getElementById('status');
     const script = document.createElement('script');
-    script.src = "https://unpkg.com/decap-cms@^3.8.3/dist/umd/index.min.js";
+    script.src = "https://unpkg.com/decap-cms@^3.8.3/dist/decap-cms.js";
 
     script.onload = () => {
       if (!window.CMS) {
