--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.8.3/dist/decap-cms.js"></script>
   </head>
   <body>
+    <!-- This is required for Decap CMS to render -->
+    <div id="nc-root"></div>
   </body>
 </html>
