--- a/basket.html
+++ b/basket.html
@@ -34,97 +34,101 @@ title: سلة المشتريات
 {% include scripts.html %}
 
 <script>
-function renderBasket() {
-  let basket = JSON.parse(localStorage.getItem("basket")) || [];
-  let basketDiv = document.getElementById("basket-items");
-  let totalDiv = document.getElementById("basket-total");
-  basketDiv.innerHTML = "";
+  // Base URL for GitHub Pages
+  const BASE_URL = "{{ site.baseurl }}"; // becomes "/Fruit"
 
-  if (basket.length === 0) {
-    basketDiv.innerHTML = "<p>السلة فارغة</p>";
-    totalDiv.innerHTML = "";
-    return;
-  }
+  function renderBasket() {
+    let basket = JSON.parse(localStorage.getItem("basket")) || [];
+    let basketDiv = document.getElementById("basket-items");
+    let totalDiv = document.getElementById("basket-total");
+    basketDiv.innerHTML = "";
 
-  let total = 0;
-  basket.forEach((item, index) => {
-    total += item.price * item.qty;
-    basketDiv.innerHTML += `
-      <div class="card mb-3 p-3">
-        <div class="row align-items-center">
-          <div class="col-md-2">
-            <img src="${item.image}" alt="${item.title}" class="img-fluid rounded">
-          </div>
-          <div class="col-md-6 basket-product-description">
-            <h5>${item.title}</h5>
-            <p>السعر: $${item.price.toFixed(2)}</p>
-            <p>الكمية: ${item.qty}</p>
-          </div>
-          <div class="col-md-4 text-left">
-            <button class="btn btn-danger remove-item" data-index="${index}">إزالة</button>
+    if (basket.length === 0) {
+      basketDiv.innerHTML = "<p>السلة فارغة</p>";
+      totalDiv.innerHTML = "";
+      return;
+    }
+
+    let total = 0;
+    basket.forEach((item, index) => {
+      // Fix image path dynamically
+      let imagePath = item.image.startsWith("http") ? item.image : BASE_URL + item.image;
+      total += item.price * item.qty;
+
+      basketDiv.innerHTML += `
+        <div class="card mb-3 p-3">
+          <div class="row align-items-center">
+            <div class="col-md-2">
+              <img src="${imagePath}" alt="${item.title}" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6 basket-product-description">
+              <h5>${item.title}</h5>
+              <p>السعر: $${item.price.toFixed(2)}</p>
+              <p>الكمية: ${item.qty}</p>
+            </div>
+            <div class="col-md-4 text-left">
+              <button class="btn btn-danger remove-item" data-index="${index}">إزالة</button>
+            </div>
           </div>
         </div>
-      </div>
-    `;
-  });
+      `;
+    });
 
-  totalDiv.innerHTML = `الإجمالي: $${total.toFixed(2)}`;
+    totalDiv.innerHTML = `الإجمالي: $${total.toFixed(2)}`;
 
-  // Remove item functionality
-  document.querySelectorAll(".remove-item").forEach(button => {
-    button.addEventListener("click", () => {
-      const idx = parseInt(button.dataset.index);
-      basket.splice(idx, 1);
-      localStorage.setItem("basket", JSON.stringify(basket));
+    // Remove item functionality
+    document.querySelectorAll(".remove-item").forEach(button => {
+      button.addEventListener("click", () => {
+        const idx = parseInt(button.dataset.index);
+        basket.splice(idx, 1);
+        localStorage.setItem("basket", JSON.stringify(basket));
+        renderBasket();
+      });
+    });
+  }
+
+  // Checkout button functionality
+  document.addEventListener("DOMContentLoaded", () => {
+    renderBasket();
+
+    document.getElementById("checkout-btn").addEventListener("click", () => {
+      const basket = JSON.parse(localStorage.getItem("basket")) || [];
+      if (basket.length === 0) {
+        alert("السلة فارغة");
+        return;
+      }
+
+      const name = document.getElementById("customer-name").value.trim();
+      const location = document.getElementById("customer-location").value.trim();
+
+      if (!name || !location) {
+        alert("الرجاء إدخال الاسم والعنوان");
+        return;
+      }
+
+      // Build the WhatsApp message
+      let message = `طلب من: ${name}\nالموقع: ${location}\n\nتفاصيل الطلب:\n`;
+      let total = 0;
+      basket.forEach(item => {
+        message += `- ${item.title} x${item.qty} : $${(item.price * item.qty).toFixed(2)}\n`;
+        total += item.price * item.qty;
+      });
+      message += `\nالإجمالي: $${total.toFixed(2)}`;
+
+      const encodedMessage = encodeURIComponent(message);
+
+      const whatsappNumber = "960790000"; 
+      const whatsappURL = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
+
+      window.open(whatsappURL, "_blank");
+
+      // Clear basket
+      localStorage.removeItem("basket");
       renderBasket();
     });
   });
-}
-
-// Checkout button functionality
-document.addEventListener("DOMContentLoaded", () => {
-  renderBasket();
-
-  document.getElementById("checkout-btn").addEventListener("click", () => {
-    const basket = JSON.parse(localStorage.getItem("basket")) || [];
-    if (basket.length === 0) {
-      alert("السلة فارغة");
-      return;
-    }
-
-    const name = document.getElementById("customer-name").value.trim();
-    const location = document.getElementById("customer-location").value.trim();
-
-    if (!name || !location) {
-      alert("الرجاء إدخال الاسم والعنوان");
-      return;
-    }
-
-    // Build the WhatsApp message
-    let message = `طلب من: ${name}\nالموقع: ${location}\n\nتفاصيل الطلب:\n`;
-    let total = 0;
-    basket.forEach(item => {
-      message += `- ${item.title} x${item.qty} : $${(item.price * item.qty).toFixed(2)}\n`;
-      total += item.price * item.qty;
-    });
-    message += `\nالإجمالي: $${total.toFixed(2)}`;
-
-    // Encode the message for URL
-    const encodedMessage = encodeURIComponent(message);
-
-    // WhatsApp link (replace phone number with yours, e.g., 9627xxxxxxx)
-    const whatsappNumber = "960790000"; 
-    const whatsappURL = `https://wa.me/${whatsappNumber}?text=${encodedMessage}`;
-
-    // Redirect to WhatsApp
-    window.open(whatsappURL, "_blank");
-
-    // Clear basket
-    localStorage.removeItem("basket");
-    renderBasket();
-  });
-});
 </script>
+
 
 </body>
 </html>
